--- a/pention.html
+++ b/pention.html
@@ -121,8 +121,8 @@
               </a>
               <div class="collapse" id="general-pages">
                 <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="/insurance.html#INSURANCE_POLICIES">Insurance Policies</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/insurance.html#ULIP">ULIP</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="">Insurance Policies</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="">ULIP</a></li>
                 </ul>
               </div>
             </li>
@@ -147,19 +147,19 @@
               </a>
               <div class="collapse" id="general-pages">
                 <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Mutual funds</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Bonds</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Deventures</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Exchange Traded funds</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">National pension system</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Government securities</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Commercial Papers</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Real estate Investment trusts</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Infrastructure Investment trust</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Alternate Investment funds</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Systematic Investment plan</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Equity shares</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Collective Investmentscheme</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="">Mutual funds</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="">Bonds</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="">Deventures</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="">Exchange Traded funds</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="">National pension system</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="">Government securities</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="">Commercial Papers</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="">Real estate Investment trusts</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="">Infrastructure Investment trust</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="">Alternate Investment funds</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="">Systematic Investment plan</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="">Equity shares</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="">Collective Investmentscheme</a></li>
                 </ul>
               </div>
             </li>
@@ -245,7 +245,7 @@
           <!-- partial:partials/_footer.html -->
           <footer class="footer">
             <div class="container-fluid d-flex justify-content-between">
-              <span class="text-muted d-block text-center text-sm-start d-sm-inline-block">Made with ❤️ and ☕ Hackholics</span>
+              <span class="text-muted d-block text-center text-sm-start d-sm-inline-block">Made with Hackalcoholics</span>
             </div>
           </footer>
           <!-- partial -->
