--- a/index.html
+++ b/index.html
@@ -105,11 +105,12 @@
               </a>
               <div class="collapse" id="general-pages">
                 <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="">Deposit </a></li>
-                  <li class="nav-item"> <a class="nav-link" href="">Term Deposite</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="">Recurring Deposite</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="">Certificate of deposite</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="">Indian deposit recipt</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/bank.html#DEPOSIT">Deposit </a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/bank.html#TERM_DEPOSIT">Term Deposite</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/bank.html#RECURRING_DEPOSIT">Recurring Deposite</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/bank.html#CREDIT_CARD">Credit Card</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/bank.html#CD">Certificate of deposite</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/bank.html#IDR">Indian deposit recipt</a></li>
                 </ul>
               </div>
             </li>
@@ -147,19 +148,19 @@
               </a>
               <div class="collapse" id="general-pages">
                 <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Mutual funds</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Bonds</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Deventures</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Exchange Traded funds</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">National pension system</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Government securities</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Commercial Papers</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Real estate Investment trusts</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Infrastructure Investment trust</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Alternate Investment funds</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Systematic Investment plan</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Equity shares</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#">Collective Investmentscheme</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/investment.html#MUTUAL_FUNDS">Mutual funds</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/investment.html#BONDS">Bonds</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/investment.html#DEBENTURES">Deventures</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/investment.html#ETF">Exchange Traded funds</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/investment.html#NPS">National pension system</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/investment.html#GOVT_SECURITIES">Government securities</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/investment.html#CP">Commercial Papers</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/investment.html#REIT">Real estate Investment trusts</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/investment.html#INVIT">Infrastructure Investment trust</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/investment.html#AIF">Alternate Investment funds</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/investment.html#SIP">Systematic Investment plan</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/investment.html#EQUITIES">Equity shares</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/investment.html#CIS">Collective Investmentscheme</a></li>
                 </ul>
               </div>
             </li>
@@ -245,7 +246,7 @@
           <!-- partial:partials/_footer.html -->
           <footer class="footer">
             <div class="container-fluid d-flex justify-content-between">
-              <span class="text-muted d-block text-center text-sm-start d-sm-inline-block">Made with ❤️ and ☕ Hackholics</span>
+              <span class="text-muted d-block text-center text-sm-start d-sm-inline-block">Made with ❤️ and ☕ by Team Hackholics</span>
             </div>
           </footer>
           <!-- partial -->
