--- a/pention.html
+++ b/pention.html
@@ -174,7 +174,7 @@
               <h3 class="page-title">
                 <span class="page-title-icon bg-gradient-primary text-white me-2">
                   <i class="mdi mdi-home"></i>
-                </span> Dashboard
+                </span> Employee Provident Fund (EPF)
               </h3>
               <nav aria-label="breadcrumb">
                 <ul class="breadcrumb">
@@ -184,14 +184,49 @@
                 </ul>
               </nav>
             </div>
+            <!--  -->
             <div class="row">
+              <div class="col-lg-6 grid-margin stretch-card">
+                <div class="card">
+                  <div class="card-body">
+                    <h4 class="card-title">Pie chart</h4>
+                    <canvas id="epf-pi" style="height:250px"></canvas>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6 grid-margin stretch-card">
+                <div class="card">
+                  <div class="card-body">
+                    <h4 class="card-title">Bar chart</h4>
+                    <canvas id="epf-bar" style="height:250px"></canvas>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--  -->
+
+            <div class="page-header">
+              <h3 class="page-title">
+                <span class="page-title-icon bg-gradient-primary text-white me-2">
+                  <i class="mdi mdi-home"></i>
+                </span> Public Provident Fund (PPF)
+              </h3>
+              <nav aria-label="breadcrumb">
+                <ul class="breadcrumb">
+                  <li class="breadcrumb-item active" aria-current="page">
+                    <span></span>Overview <i class="mdi mdi-alert-circle-outline icon-sm text-primary align-middle"></i>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div class="row">  
               <div class="col-md-4 stretch-card grid-margin">
                 <div class="card bg-gradient-danger card-img-holder text-white">
                   <div class="card-body">
                     <img src="assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
-                    <h4 class="font-weight-normal mb-3">Weekly Sales <i class="mdi mdi-chart-line mdi-24px float-right"></i>
+                    <h4 class="font-weight-normal mb-3">Current Ammount <i class="mdi mdi-chart-line mdi-24px float-right"></i>
                     </h4>
-                    <h2 class="mb-5">$ 15,0000</h2>
+                    <h3 class="mb-5" id="ppf-cb">$ 15,0000</h3>
                     <h6 class="card-text">Increased by 60%</h6>
                   </div>
                 </div>
@@ -200,9 +235,9 @@
                 <div class="card bg-gradient-info card-img-holder text-white">
                   <div class="card-body">
                     <img src="assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
-                    <h4 class="font-weight-normal mb-3">Weekly Orders <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
+                    <h4 class="font-weight-normal mb-3">Maturity Date <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
                     </h4>
-                    <h2 class="mb-5">45,6334</h2>
+                    <h3 class="mb-5" id="ppf-md">$ 15,0000</h3>
                     <h6 class="card-text">Decreased by 10%</h6>
                   </div>
                 </div>
@@ -280,6 +315,8 @@
     <script src="assets/js/misc.js"></script>
     <!-- endinject -->
     <!-- Custom js for this page -->
+    <script src="assets/js/pention.js"></script>
+    <script src="assets/js/chart.js"></script>
     <script src="assets/js/dashboard.js"></script>
     <!-- End custom js for this page -->
   </body>
