--- a/pention.html
+++ b/pention.html
@@ -52,10 +52,10 @@
               </a>
               <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
                 <a class="dropdown-item" href="#">
-                  <i class="mdi mdi-cached me-2 text-success"></i> Activity Log </a>
+                  <i class="mdi mdi-cached me-2 text-success"></i> Demo Bank 1 </a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">
-                  <i class="mdi mdi-logout me-2 text-primary"></i> Signout </a>
+                  <i class="mdi mdi-logout me-2 text-primary"></i> Demo Bank 2 </a>
               </div>
             </li>
             <li class="nav-item nav-logout d-none d-lg-block">
@@ -105,12 +105,12 @@
               </a>
               <div class="collapse" id="general-pages">
                 <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="/bank.html#DEPOSIT">Deposit </a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/bank.html#TERM_DEPOSIT">Term Deposite</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/bank.html#RECURRING_DEPOSIT">Recurring Deposite</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/bank.html#CREDIT_CARD">Credit Card</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/bank.html#CD">Certificate of deposite</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/bank.html#IDR">Indian deposit recipt</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="index.html#sec1">Deposit </a></li>
+                  <li class="nav-item"> <a class="nav-link" href="index.html#sec2">Term Deposite</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="index.html#sec3">Recurring Deposite</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="index.html#sec4">Credit Card</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="index.html#sec5">Certificate of deposite</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="index.html#sec6">Indian deposit recipt</a></li>
                 </ul>
               </div>
             </li>
@@ -122,8 +122,8 @@
               </a>
               <div class="collapse" id="general-pages">
                 <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="/insurance.html#INSURANCE_POLICIES">Insurance Policies</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/insurance.html#ULIP">ULIP</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="insurance.html#sec1">Insurance Policies</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="insurance.html#sec2">ULIP</a></li>
                 </ul>
               </div>
             </li>
@@ -135,8 +135,8 @@
               </a>
               <div class="collapse" id="general-pages">
                 <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="/pention.html#EPF">Employee Provident fund</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/pention.html#PPF">Public provident fund</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="pention.html">Employee Provident fund</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="pention.html#sec2">Public provident fund</a></li>
                 </ul>
               </div>
             </li>
@@ -148,19 +148,19 @@
               </a>
               <div class="collapse" id="general-pages">
                 <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#MUTUAL_FUNDS">Mutual funds</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#BONDS">Bonds</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#DEBENTURES">Deventures</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#ETF">Exchange Traded funds</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#NPS">National pension system</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#GOVT_SECURITIES">Government securities</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#CP">Commercial Papers</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#REIT">Real estate Investment trusts</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#INVIT">Infrastructure Investment trust</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#AIF">Alternate Investment funds</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#SIP">Systematic Investment plan</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#EQUITIES">Equity shares</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/investment.html#CIS">Collective Investmentscheme</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="investment.html#sec1">Mutual funds</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="investment.html#sec2">Bonds</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="investment.html#sec3">Deventures</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="investment.html#sec4">Exchange Traded funds</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="investment.html#sec5">National pension system</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="investment.html#sec6">Government securities</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="investment.html#sec7">Commercial Papers</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="investment.html#sec8">Real estate Investment trusts</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="investment.html#sec9">Infrastructure Investment trust</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="investment.html#sec10">Alternate Investment funds</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="investment.html#sec11">Systematic Investment plan</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="investment.html#sec12">Equity shares</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="investment.html#sec13">Collective Investmentscheme</a></li>
                 </ul>
               </div>
             </li>
@@ -205,7 +205,7 @@
             </div>
             <!--  -->
 
-            <div class="page-header">
+            <div id="sec1" class="page-header">
               <h3 class="page-title">
                 <span class="page-title-icon bg-gradient-primary text-white me-2">
                   <i class="mdi mdi-home"></i>
@@ -219,7 +219,7 @@
                 </ul>
               </nav>
             </div>
-            <div class="row">  
+            <div id="sec2" class="row">  
               <div class="col-md-4 stretch-card grid-margin">
                 <div class="card bg-gradient-danger card-img-holder text-white">
                   <div class="card-body">
@@ -239,39 +239,6 @@
                     </h4>
                     <h3 class="mb-5" id="ppf-md">$ 15,0000</h3>
                     <h6 class="card-text">Decreased by 10%</h6>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4 stretch-card grid-margin">
-                <div class="card bg-gradient-success card-img-holder text-white">
-                  <div class="card-body">
-                    <img src="assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
-                    <h4 class="font-weight-normal mb-3">Visitors Online <i class="mdi mdi-diamond mdi-24px float-right"></i>
-                    </h4>
-                    <h2 class="mb-5">95,5741</h2>
-                    <h6 class="card-text">Increased by 5%</h6>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-7 grid-margin stretch-card">
-                <div class="card">
-                  <div class="card-body">
-                    <div class="clearfix">
-                      <h4 class="card-title float-left">Visit And Sales Statistics</h4>
-                      <div id="visit-sale-chart-legend" class="rounded-legend legend-horizontal legend-top-right float-right"></div>
-                    </div>
-                    <canvas id="visit-sale-chart" class="mt-4"></canvas>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-5 grid-margin stretch-card">
-                <div class="card">
-                  <div class="card-body">
-                    <h4 class="card-title">Traffic Sources</h4>
-                    <canvas id="traffic-chart"></canvas>
-                    <div id="traffic-chart-legend" class="rounded-legend legend-vertical legend-bottom-left pt-4"></div>
                   </div>
                 </div>
               </div>
